# ziit-zed

./: Cargo.toml  dist-workspace.toml  extension.toml
.github/workflows/: build.yml  release.yml
scripts/: get_languages.sh
src/: config.rs  heartbeat.rs  language_server.rs  lib.rs
ziit-ls/: Cargo.toml
ziit-ls/src/: api.rs  commands.rs  config.rs  heartbeat.rs  language.rs  main.rs  project.rs
