[package]
name = "ziit-zed"
version = "1.0.0"
edition = "2021"
repository = "https://github.com/0pandadev/ziit-zed"

[dependencies]
zed_extension_api = "0.7.0"
log = "0.4.28"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[workspace]
members = ["ziit-ls"]

[profile.dist]
inherits = "release"
lto = "thin"
