[package]
name = "ziit-ls"
version = "1.0.0"
edition = "2021"
repository = "https://github.com/0pandadev/ziit-zed"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
chrono = { version = "0.4.42", features = ["serde"] }
log = "0.4.28"
env_logger = "0.11"
dirs = "6.0.0"
tokio = { version = "1.48.0", features = ["full"] }
anyhow = "1.0.100"
tower-lsp = "0.20.0"
arc-swap = "1.7.1"
url = "2.5.7"
clap = "4.5.50"
reqwest = { version = "0.12", features = ["json", "blocking"] }
